[package]
name = "inbound"
version = "0.1.0"
edition = "2021"
description = "Monitor incoming network connections and detect port scans"
license = "MIT OR Apache-2.0"

[lib]
name = "inbound"
path = "src/lib.rs"

[dependencies]
# Packet capture
pcap = "1.1"

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"

# DNS lookup
dns-lookup = "2.0"

[dev-dependencies]
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
strip = true